--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,3 +147,53 @@ main {
   border-radius: 1rem;
   margin-right: 0.25rem;
 }
+
+
+.candidaturas-card {
+  background-color: #FFF;
+  color: black;
+  margin: 0.75rem 0rem;
+  padding: 1.5rem 0.75rem;
+  border-radius: 1rem;
+
+}
+
+
+.cand-titulo{
+  margin-bottom: 2rem;
+  font-weight: 600;
+
+}
+
+.h1-cand{
+  font-size: 1.25rem;
+  margin-bottom: 1rem;
+}
+
+.h2-cand{
+  font-size: 1rem;
+}
+
+
+.cand-steps{
+  font-size: 1rem;
+  margin-left: 1rem;
+  margin-bottom:2rem;
+  font-weight:400;
+  align-items: center;
+
+}
+
+
+.cand-check{
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  justify-content: center;
+  
+
+}
+
+.cand-write{
+  padding-left: 0.5rem
+}
